Remove subtitle from the page title

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>超级日记 | SuperDairy - 云上天国</title>
+    <title>超级日记 | SuperDairy</title>
     <link rel="shortcut icon" href="../favicon.png" type="image/png">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
@@ -132,56 +132,6 @@
     </style>
 </head>
 <body class="min-h-screen">
-
-    <!-- 继承原导航栏 -->
-    <header class="sticky top-0 z-50 w-full border-b border-slate-200 bg-white/80 backdrop-blur-md">
-        <div class="max-w-7xl mx-auto px-6 h-16 flex items-center justify-between">
-            <div class="flex items-center gap-3">
-                <i data-lucide="cloud" class="text-blue-600 w-6 h-6"></i>
-                <div class="hidden sm:block">
-                    <span class="font-bold tracking-tight text-slate-900"><a href="../../index.html">云上天国</a></span>
-                    <span class="mono text-[10px] text-slate-400 ml-2">v3.0.1</span>
-                </div>
-            </div>
-
-            <nav class="hidden md:flex items-center gap-8 text-sm font-medium text-slate-600">
-                <div class="relative group cursor-pointer py-2">
-                    <span class="group-hover:text-blue-600 transition-colors flex items-center gap-1">
-                        本站创意 <i data-lucide="chevron-down" class="w-4 h-4"></i>
-                    </span>
-                    <div class="absolute top-full left-0 w-56 p-2 bg-white border border-slate-200 shadow-xl rounded-xl opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all">
-                        <a href="../nativeCreativity/pretendSinging/index.html" class="flex items-center gap-3 p-3 rounded-lg hover:bg-slate-50 hover:text-blue-600">
-                            <i data-lucide="music" class="w-4 h-4"></i> 假装自己在唱歌
-                        </a>
-                        <a href="../nativeCreativity/wordsReview/index.html" class="flex items-center gap-3 p-3 rounded-lg hover:bg-slate-50 hover:text-blue-600">
-                            <i data-lucide="brain-circuit" class="w-4 h-4"></i> 单词强化训练
-                        </a>
-                        <a href="../nativeCreativity/foreignEnterpriseRecruitment/index.html" class="flex items-center gap-3 p-3 rounded-lg hover:bg-slate-50 hover:text-blue-600">
-                            <i data-lucide="globe" class="w-4 h-4"></i> 外企招聘网站汇总
-                        </a>
-                    </div>
-                </div>
-                <a href="#" class="hover:text-blue-600 transition-colors">会员托管</a>
-                <a href="../../siteRecommendation/index.html" class="hover:text-blue-600 transition-colors">实用链接</a>
-            </nav>
-
-            <div class="flex items-center gap-5 border-l border-slate-200 pl-6">
-                <a href="https://github.com/Jerry-Sliver/CloudboundParadise" target="_blank" class="text-slate-400 hover:text-slate-900 transition-colors"><i data-lucide="github" class="w-5 h-5"></i></a>
-                <a href="#" class="text-slate-400 hover:text-blue-400 transition-colors"><i data-lucide="twitter" class="w-5 h-5"></i></a>
-                <a href="https://www.xiaohongshu.com/user/profile/66de60cf000000001d02166e" class="text-slate-400 hover:text-red-500 transition-colors" title="小红书"><i data-lucide="book-open" class="w-5 h-5"></i></a>
-                <div class="relative group">
-                    <button class="bg-slate-900 text-white px-4 py-1.5 rounded-full text-xs mono hover:bg-blue-600 transition-all flex items-center gap-2">
-                        CONTACT <i data-lucide="send" class="w-3 h-3"></i>
-                    </button>
-                    <div class="absolute top-full right-0 mt-2 w-48 p-2 bg-white border border-slate-200 shadow-xl rounded-xl opacity-0 invisible group-hover:opacity-100 group-hover:visible transition-all">
-                        <p class="text-[10px] text-slate-400 px-3 py-1 mono uppercase">E-mail</p>
-                        <a href="mailto:973256921@qq.com" class="block p-2 text-xs hover:bg-slate-50 rounded-md">973256921@qq.com</a>
-                        <a href="mailto:lee434164@gmail.com" class="block p-2 text-xs hover:bg-slate-50 rounded-md">lee434164@gmail.com</a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </header>
 
     <main class="max-w-7xl mx-auto px-6 pt-12 pb-32">
         <!-- 页面标题 -->
